# NanoBlog

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .gitignore  Dockerfile  README_TESTING.md  README_TESTING_FIX.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
backend/src/: main.py
backend/src/api/: auth.py  comments.py  dependencies.py  favorites.py  posts.py  ratings.py  search.py  uploads.py  users.py
backend/src/application/: auth_service.py  comments_service.py  favorites_service.py  posts_service.py  ratings_service.py  uploads_service.py  users_service.py
backend/src/core/: .env.example  logs.py  settings.py
backend/src/domain/: password_hasher.py
backend/src/domain/models/: posts.py  users.py
backend/src/domain/repositories/: __init__.py  base.py  comment_repository.py  favorite_repository.py  post_repository.py  rating_repository.py  user_repository.py
backend/src/infrastructure/: password_hasher_impl.py
backend/src/infrastructure/database/: database.py  models.py
backend/src/infrastructure/repositories/: __init__.py  comment_repository_impl.py  favorite_repository_impl.py  post_repository_impl.py  rating_repository_impl.py  user_repository_impl.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: README.md  conftest.py  test_auth_api.py  test_comments_api.py  test_favorites_api.py  test_posts_api.py  test_ratings_api.py  test_users_api.py
backend/tests/unit/: test_auth_service.py  test_comments_service.py  test_favorites_service.py  test_password_hasher.py  test_posts_service.py  test_ratings_service.py  test_users_service.py
frontend/micro-blog/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.js  vitest.config.js
frontend/micro-blog/coverage/: coverage-final.json  index.html
frontend/micro-blog/coverage/components/: Icons.jsx.html  Layout.jsx.html  Markdown.jsx.html  PostCard.jsx.html  SearchBar.jsx.html  index.html
frontend/micro-blog/coverage/context/: AuthContext.jsx.html  ThemeContext.jsx.html  index.html
frontend/micro-blog/e2e/: auth.spec.js  navigation.spec.js  posts.spec.js  profile.spec.js  search.spec.js  theme.spec.js
frontend/micro-blog/src/: App.jsx  api.js  index.css
frontend/micro-blog/src/components/: Icons.jsx  Layout.jsx  Markdown.jsx  PostCard.jsx  SearchBar.jsx
frontend/micro-blog/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/micro-blog/src/pages/: AuthPage.jsx  CreatePostPage.jsx  EditPostPage.jsx  FavoritesPage.jsx  FeedPage.jsx  PostPage.jsx  ProfilePage.jsx  SearchPage.jsx  UserPage.jsx
frontend/micro-blog/src/test/: api.test.js  setup.js
frontend/micro-blog/src/test/components/: Layout.test.jsx  Markdown.test.jsx  PostCard.test.jsx  SearchBar.test.jsx
frontend/micro-blog/src/test/context/: AuthContext.test.jsx  ThemeContext.test.jsx
frontend/micro-blog/src/test/utils/: validation.test.js
sql/: schema.sql
src/: main.py
src/api/: auth.py  dependencies.py  posts.py  users.py
src/application/: posts_service.py  users_service.py
src/core/: .env  security.py  settings.py
src/domain/: post_repository.py  user_repository.py
src/domain/models/: models.py  posts.py  users.py
src/infrastructure/: post_repository_impl.py  simple_database.py  user_repository_impl.py
