[project]
name = "microblog"
version = "0.1.0"
description = "Fastapi microblog backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "PyJWT>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["B008"
]
src = ["src"]

[tool.ruff.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
disable_error_code = ["no-any-return", "return-value", "var-annotated"]
warn_unused_configs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
strict_equality = true
plugins = []



